# cli

./: Cargo.toml  README.md  config.json
src/: app.rs  buffer.rs  composer.rs  lib.rs  main.rs  project.rs  ui.rs
tests/: buffer_test.rs
