[package]
name = "term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
anyhow = "1.0"
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
ansi-to-tui = "2.0.0"
